# fastapi-actions

./: main.py  pyproject.toml
.github/workflows/: python-coverage.yml  python-package-with-uv.yml
app/: main.py
app/routers/: todos.py
app/tests/: test_main.py
app/tests/routers/: test_todos.py
