[project]
name = "todos-api"
version = "0.1.0"
description = "Test project for implementing GitHub Actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
